  with FieldExistsQuery. (Zach Chen, Michael McCandless, Adrien Grand)

* LUCENE-10481: FacetsCollector will not request scores if it does not use them. (Mike Drob)

* LUCENE-10503: Potential speedup for pure disjunctions whose clauses produce
  scores that are very close to each other. (Adrien Grand)

Bug Fixes
---------------------
* LUCENE-10477: Highlighter: WeightedSpanTermExtractor.extractWeightedSpanTerms to Query#rewrite
  multiple times if necessary. (Christine Poerschke, Adrien Grand)

* LUCENE-10491: A correctness bug in the way scores are provided within TaxonomyFacetSumValueSource
  was fixed. (Michael McCandless, Greg Miller)

* LUCENE-10466: Ensure IndexSortSortedNumericDocValuesRangeQuery handles sort field
  types besides LONG (Andriy Redko)

* LUCENE-10292: Suggest: Fix AnalyzingInfixSuggester / BlendedInfixSuggester to correctly return
  existing lookup() results during concurrent build().  Fix other FST based suggesters so that
  getCount() returned results consistent with lookup() during concurrent build().  (hossman)

* LUCENE-10508: Fixes some edge cases where GeoArea were built in a way that vertical planes
  could not evaluate their sign, either because the planes where the same or the center between those
  planes was lying in one of the planes. (Ignacio Vera)

* LUCENE-10495: Fix return statement of siblingsLoaded() in TaxonomyFacets. (Yuting Gan)

Build
---------------------

* Upgrade forbiddenapis to version 3.3.  (Uwe Schindler)

Other
---------------------
* LUCENE-10526: Test-framework: Add FilterFileSystemProvider.wrapPath(Path) method for mock filesystems
  to override if they need to extend the Path implementation. (Gautam Worah, Robert Muir)

======================= Lucene 9.1.0 =======================

API Changes
---------------------

* LUCENE-10244: MultiCollector::getCollectors is now public, allowing users to access the wrapped
  collectors. (Andriy Redko)
